--- a/SistHac/.env
+++ b/SistHac/.env
@@ -15,6 +15,16 @@ DB_DATABASE=inventario_sistemas
 DB_USERNAME=laravel
 DB_PASSWORD=123456
 
+#SISBAN 94
+DB_CONNECTION_SQL=sqlsrv
+SQL_PORT=1433
+SISBAN_HOST= 192.168.191.94
+SISBAN_DATABASE= sisban
+SISBAN_USERNAME=sa
+SISBAN_PASSWORD=Alfa2020
+
+
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
